# jupyter-dremio

./: .gitignore  INSTALL.md  LICENSE  README.md  package.json  pyproject.toml  tsconfig.json
jupyter-config/server_config.d/: jupyter_dremio.json
jupyter_dremio/: __init__.py  handlers.py
schema/: plugin.json
src/: JobsWidget.ts  WikiWidget.ts  api.ts  icons.ts  index.ts
src/components/: CatalogNode.tsx  ContextMenu.tsx  DremioPanel.tsx  JobsViewer.tsx  LoginForm.tsx  TagEditor.tsx  Toolbar.tsx  WikiViewer.tsx
style/: index.css  index.js
